--- a/netflix-clone/index.html
+++ b/netflix-clone/index.html
@@ -8,7 +8,7 @@
       href="https://cdn4.iconfinder.com/data/icons/logos-and-brands/512/227_Netflix_logo-512.png"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Netlify Clone</title>
+    <title>Netflix Clone</title>
   </head>
   <body>
     <div id="root"></div>
